Write HTML for header and top section of landing page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
-    
+
     <body>
+        <nav class="header">
+            <h3>MineBoss Inc.</h3>
+            <ul>
+                <a href="#">Movin' Dirt</a>
+                <a href="#">Diggin'</a>
+                <a href="#">MineBoss University</a>
+            </ul>
+        </nav>
         
+        <div class="top">
+            <div class="top-text">
+                <h1>BECOME THE MINE BOSS</h1>
+                <p>Dig for the gold and get some really cool prizes!</p>
+                <button>Join the Adventure</button>
+            </div>
+            <img src="./mineboss.jpeg" alt="MineBoss brand">
+        </div>
     </body>
 </html>
