--- a/index.html
+++ b/index.html
@@ -4,26 +4,32 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
         <title>Document</title>
     </head>
 
     <body>
-        <nav class="header">
-            <h3>MineBoss Inc.</h3>
-            <ul>
-                <a href="#">Movin' Dirt</a>
-                <a href="#">Diggin'</a>
-                <a href="#">MineBoss University</a>
-            </ul>
-        </nav>
-        
-        <div class="top">
-            <div class="top-text">
-                <h1>BECOME THE MINE BOSS</h1>
-                <p>Dig for the gold and get some really cool prizes!</p>
-                <button>Join the Adventure</button>
+        <div class="first">
+            <nav class="header">
+                <h3>MineBoss Inc.</h3>
+                <ul class="header-links">
+                    <a href="#">Movin' Dirt</a>
+                    <a href="#">Diggin'</a>
+                    <a href="#">MineBoss University</a>
+                </ul>
+            </nav>
+            
+            <div class="hero">
+                <div class="hero-text">
+                    <h1>BECOME THE MINE BOSS</h1>
+                    <p>Dig for the gold and get some really cool prizes!</p>
+                    <button>Join the Adventure</button>
+                </div>
+                <img src="./mineboss.jpeg" alt="MineBoss brand">
             </div>
-            <img src="./mineboss.jpeg" alt="MineBoss brand">
         </div>
     </body>
 </html>
