Restructure hero-txt div and fully style button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                     <p>Dig for the gold and get some really cool prizes!</p>
                     <button>Join the Adventure</button>
                 </div>
-                <img src="./mineboss.jpeg" alt="MineBoss brand">
+                <div class="hero-img">
+                    <img src="./mineboss.jpeg" alt="MineBoss brand">
+                </div>
             </div>
         </div>
     </body>
