--- a/index.html
+++ b/index.html
@@ -33,5 +33,27 @@
                 </div>
             </div>
         </div>
+
+        <div class="second">
+            <h3>Second Heading</h3>
+            <div class="img-card-master">
+                <div class="img-card">
+                    <div class="card"></div>
+                    <p>Text</p>
+                </div>
+                <div class="img-card">
+                    <div class="card"></div>
+                    <p>Text</p>
+                </div>
+                <div class="img-card">
+                    <div class="card"></div>
+                    <p>Text</p>
+                </div>
+                <div class="img-card">
+                    <div class="card"></div>
+                    <p>Text</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
