Format img-card templates preoperly and center text underneath

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="img-card-master">
                 <div class="img-card">
                     <div class="card"></div>
-                    <p>Text</p>
+                    <p>text</p>
                 </div>
                 <div class="img-card">
                     <div class="card"></div>
