Add in proper text and media for second row

--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
         </div>
 
         <div class="second">
-            <h3>Second Heading</h3>
+            <h3>GET BIT BY THE GOLD BUG</h3>
             <div class="img-card-master">
                 <div class="img-card">
-                    <div class="card"></div>
-                    <p>text</p>
+                    <img class="card" src="./theboss.jpeg" alt="Mineboss avatar"></img>
+                    <p>Top of the leaderboard can go mining for real gold!</p>
                 </div>
                 <div class="img-card">
-                    <div class="card"></div>
-                    <p>Text</p>
+                    <img class="card" src="./theboss.jpeg" alt="Mineboss avatar"></img>
+                    <p>Play with kinfolk and friends!</p>
                 </div>
                 <div class="img-card">
-                    <div class="card"></div>
-                    <p>Text</p>
+                    <img class="card" src="./theboss.jpeg" alt="Mineboss avatar"></img>
+                    <p>Coaching from Wild Willy!</p>
                 </div>
                 <div class="img-card">
-                    <div class="card"></div>
-                    <p>Text</p>
+                    <img class="card" src="./theboss.jpeg" alt="Mineboss avatar"></img>
+                    <p>Talk with the voices in your head!</p>
                 </div>
             </div>
         </div>
