Create and format remaining three landing page sections, revise text in previous sections

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <title>Document</title>
     </head>
 
@@ -16,7 +16,7 @@
             <nav class="header">
                 <h3>MineBoss Inc.</h3>
                 <ul class="header-links">
-                    <a href="#">Movin' Dirt</a>
+                    <a href="#">The Digger School World</a>
                     <a href="#">Diggin'</a>
                     <a href="#">MineBoss University</a>
                 </ul>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="img-card">
                     <img class="card" src="./theboss.jpeg" alt="Mineboss avatar"></img>
-                    <p>Play with kinfolk and friends!</p>
+                    <p>Move dirt with kinfolk and friends!</p>
                 </div>
                 <div class="img-card">
                     <img class="card" src="./theboss.jpeg" alt="Mineboss avatar"></img>
@@ -54,6 +54,24 @@
                     <p>Talk with the voices in your head!</p>
                 </div>
             </div>
+        </div>
+        <div class="third">
+            <div class="testimony">
+                <p class="quote">Truly amazing concept, the next revolution in gaming. Spectacular graphics and amazing detail all wrapped up in a ton of fun</p>
+                <p class="source">- C. Kincaid, Gamer</p>
+            </div>
+        </div>
+        <div class="fourth">
+            <div class="call-to-action">
+                <div class="four-text">
+                    <h4>Behold the power and strength of the big machines</h4>
+                    <p>Sign up to discover the gold at minebossmode.com!</p>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
+        <div class="fifth">
+            <p class="footer">Copyright © Prospector Games 2022</p>
         </div>
     </body>
 </html>
